Compiler/tests/bad/size2.nx
type a : array 2 of  [minint .. maxint];

printn(size(a));
